# resilient-jpeg-steganography

./: LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure.ac
src/: Makefile.am  Makefile.in  interface.c  interface.h  jpeg.c  jpeg.h  jsteg.c  jsteg.h  php_steganography2.h  steg.i  steganography2.php  tests.c
src/jpeg-v4/: Makefile.am  Makefile.in  ansi2knr.c  bitsink.c  bitsink.h  bitsource.c  bitsource.h  jbsmooth.c  jcarith.c  jccolor.c  jcdeflts.c  jcexpand.c  jchuff.c  jcmaster.c  jcmcu.c  jconfig.h  jcpipe.c  jcsample.c  jdarith.c  jdcolor.c  jddeflts.c  jdhuff.c  jdmaster.c  jdmcu.c  jdpipe.c  jdsample.c  jerror.c  jfwddct.c  jinclude.h  jmemdos.h  jmemmgr.c  jmemsys.c  jmemsys.h  jpegdata.h  jquant1.c  jquant2.c  jrdgif.c  jrdjfif.c  jrdppm.c  jrdrle.c  (+8 more)
